--- a/css/styles.css
+++ b/css/styles.css
@@ -5,6 +5,50 @@
     margin: 0 auto;
 }
 
+.heading {
+    background: cadetblue;
+    padding: 30px 0;
+    color: #fff;
+    border-bottom: 3px solid black;
+    text-align: center;
+}
+
+.projectContainer {
+    padding: 50px 0;
+    text-align: center;
+}
+
+.btn {
+    height: 52px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.btn > a {
+    display: inline-block;
+    text-transform: uppercase;
+    text-decoration: none;
+    color: white;
+}
+
+.link {
+    width: 100px;
+    background: #0d77d7;
+    border-radius: 6px;
+    padding: 10px 0;
+}
+
+.link:hover {
+    background: #fff;
+    color: #0d77d7;
+}
+
+.link:active {
+    color: white;
+    background: black;
+}
+
 .first {
     background: #d7613f;
 }
@@ -80,6 +124,78 @@ div.inlineBlocksContainer {
 .inlineBlocksContainer > div {
     display: inline-block;
 }
+
+/*FLOATS*/
+
+.firstFloat {
+    background: #d7613f;
+}
+
+.firstFloat > div {
+    width: 400px;
+    height: 400px;
+    outline: 3px solid red;
+    float: left;
+}
+
+.secondFloat {
+    background: #67aad7;
+}
+
+.secondFloat div {
+    outline: 3px solid red;
+}
+
+.secondFloat > div {
+    width: 800px;
+    height: 400px;
+    float: left;
+}
+
+.secondFloat > div div {
+    height: 200px;
+}
+
+.secondFloat > div + div {
+    width: 400px;
+}
+
+.secondFloat > div + div div {
+    height: 133.3px;
+}
+
+.thirdFloat {
+    background: #a4d76e;
+}
+
+.thirdFloat div {
+    outline: 3px solid red;
+}
+
+.thirdFloat > div {
+    width: 400px;
+    height: 400px;
+    float: left;
+}
+
+.thirdFloat > div + div {
+    width: 800px;
+}
+
+.thirdFloat > div + div > div {
+    height: 200px;
+}
+
+ .thirdFloat > div + div > div + div > div {
+     width: 400px;
+     height: 200px;
+     float: left;
+ }
+
+.thirdFloat > div + div > div + div > div + div > div {
+    height: 100px;
+}
+
 
 
 
