--- a/css/styles.css
+++ b/css/styles.css
@@ -7,10 +7,13 @@
 
 .heading {
     background: cadetblue;
-    padding: 30px 0;
     color: #fff;
     border-bottom: 3px solid black;
     text-align: center;
+    height: 115px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 .projectContainer {
@@ -19,14 +22,15 @@
     font-size: 20px;
 }
 
-.btn {
-    height: 52px;
+.btn > div {
     display: flex;
     justify-content: center;
     align-items: center;
+    gap: 20px;
+    min-width: 600px;
 }
 
-.btn > a {
+.btn > div > a {
     display: inline-block;
     text-transform: uppercase;
     text-decoration: none;
@@ -205,8 +209,78 @@ div.inlineBlocksContainer {
     height: 100px;
 }
 
+/*FLEX*/
 
+.flex-box-1 {
+    display: flex;
+    background: #d7613f;
+    height: 400px;
 
+}
 
+.flex-box-1 > div {
+    width: 400px;
+    outline: 3px solid red;
+}
+
+.flex-box-2 {
+    display: flex;
+    background: #67aad7;
+    height: 400px;
+}
+
+.flex-box-2 div {
+    outline: 3px solid red;
+
+}
+
+.flex-box-2-child-1 > div {
+    width: 800px;
+    height: 200px;
+}
+
+.flex-box-2-child-2 > div {
+    width: 400px;
+    height: 133.3px;
+}
+
+.flex-box-3 {
+    display: flex;
+    background: #a4d76e;
+    height: 400px;
+}
+
+.flex-box-3 div {
+    outline: 3px solid red;
+}
+
+.flex-box-3 > div:first-child {
+    width: 400px;
+}
+
+.flex-box-3 > div:last-child {
+    width: 800px;
+    height: 400px;
+}
+
+.flex-box-3 > div:last-child > div {
+    width: 800px;
+    height: 200px;
+}
+
+.flex-box-3-child-1 {
+    display: flex;
+}
+
+.flex-box-3-child-1 > div {
+
+    width: 400px;
+    height: 200px;
+}
+
+.flex-box-3-child-2 > div {
+    width: 400px;
+    height: 100px;
+}
 
 
